# xkwant

./: .flake8  .gitignore  CHANGELOG.md  README.md  batch.py  device.py  envkwant.yml  hbar.py  julia_kwant.sh  log.py  modelEH.py  physics.py  pyproject.toml  requirements.txt  scripts.py  setup.py  start_julia.sh  start_local.sh  templates.py  test.py  utils.py
.github/workflows/: flake8.yml  pytest.yml
kwantenv/: pyvenv.cfg
scripts/: LSMay23.py  May20.py  batchplot.py  dirachbar.py  doublesurfaces.py  gappeddirac.py  hpc.py  hpc_test.py  narrowleg.py  plot_template_bands.py  plotpkl.py  quadhbar.py  rashbahbar.py  script.sh  solutions.nb  summary.py  twosurface.py
scripts/templates/: dirachbar.py  doublesurfaces.py  gappeddirac.py  magnetic_field.py  narrowleg.py  quadhbar.py  rashbahbar.py  twosurface.py
xkwant/: _plot.py  batch.py  benchmark.py  config.py  device.py  log.py  physics.py  plot.py  schemas.py  templates.py  utils.py
xkwant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
