[tool.poetry]
name = "xkwant"
version = "0.1.0"
description = "A toolbox for using Kwant"
authors = ["Lixian Wang lixianphys@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
kwant = "^1.5.0"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
tqdm = "^4.66.4"
psutil = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
